no rollback of collection version on soft-fail migration commit (findOne::prepare failed)

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.5.3
    • Affects Version/s: 2.4.4
    • Component/s: None
    • None
    • ALL
    • Hide

      Fail a migration version write using findOne::prepare(), try migrating again.

      Show
      Fail a migration version write using findOne::prepare(), try migrating again.
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      On writing the version change to the config server in the migration critical section, sometimes the "prepare()" fails before we write the change. Since no data was changed, we can recover locally by re-donating the chunk back to the ShardChunkManager of the from-side shard. The shard version is reset correctly, but the collection version is not, resulting in further chunk diffs failing and the version locked to the last-migrated version.

      No impact on non-metadata operations, since the shard version and chunks are correct, but further migrations cannot proceed.

      Affects version 2.4 since previously this resulted in immediate shutdown. Unsure yet if the same problem affects master.

            Assignee:
            Greg Studer (Inactive)
            Reporter:
            Greg Studer (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: