SERVER-10013 use old manager for chunk version rollback on migration fail